syntax = "proto3";

option go_package = "../proto";

service Chat {
  rpc GetAllDialogues(IdPage) returns (DialogueCards) {}
  rpc GetOneDialogue(IdIdPage) returns (Dialogue) {}
  rpc DeleteDialogue(IdId) returns (Answer) {}
  rpc SendMessage(SendEditMessage) returns (Answer) {}
  rpc EditMessage(SendEditMessage) returns (Answer) {}
  rpc DeleteMessage(IdId) returns (Answer) {}
  rpc Mailing(MailingIn) returns (Answer) {}
  rpc Search(SearchIn) returns (DialogueCards) {}
  rpc GetAllNotifications(IdPage) returns (Notifications) {}
}

message Ids {
  repeated uint64 list = 1;
}

message MailingIn {
  uint64 userId = 1;
  uint64 eventId = 2;
  Ids to = 3;
}

message SearchIn {
  uint64 uid = 1;
  int32 id = 2;
  string str = 3;
  int32 page = 4;
}

message IdPage {
  uint64 id = 1;
  int32 page = 2;
}

message SendEditMessage {
  uint64 id1 = 1;
  string text = 2;
  uint64 id2 = 3;
}

message IdId {
  uint64 id1 = 1;
  uint64 id2 = 2;
}

message IdIdPage {
  uint64 id1 = 1;
  uint64 id2 = 2;
  int32 page = 3;
}

message Notification {
  uint64 ID = 1;
  string Type = 2;
  string Title =3;
}

message Notifications {
  repeated Notification list = 1;
}

message DialogueCard {
  uint64 ID = 1;
  UserOnEvent interlocutor = 2;
  Message lastMessage = 3;
}

message DialogueCards {
  repeated DialogueCard list = 1;
}

message UserOnEvent {
  uint64 id = 1;
  string name = 2;
  string avatar = 3;
}

message Message {
  uint64 ID = 1;
  bool FromMe = 2;
  string Text = 3;
  string Date = 4;
  bool Redact = 5;
  bool Read = 6;
}

message Messages {
  repeated Message list = 1;
}

message Dialogue {
  uint64 ID = 1;
  UserOnEvent interlocutor = 2;
  Messages dialogMessages = 3;
}

message Answer {
  bool flag = 1;
  string msg = 2;
}


